@@ -426,6 +426,9 @@ Trunk (unreleased changes)
 
     HDFS-1503. TestSaveNamespace fails. (Todd Lipcon via cos)
 
+    HDFS-1509. A savenamespace command writes the fsimage and edits into
+    all configured directories. (dhruba)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
